--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ a {                  /* A stands for link, so this section is setting the defaul
 h1 {		     /* This styles the header at the top of the page */
 	font: bold 2.1em 'Source Sans Pro',Arial, Sans-Serif;
 	text-align: left;
-	color: white;
+	color: red;
 }
 
 h2 {		     /* This styles the headers within the page */
